# ynab-tui

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASING.md  TODO.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: release.py
src/: __init__.py  config.py  main.py
src/cli/: formatters.py  helpers.py
src/clients/: amazon_client.py  decorators.py  mock_ynab_client.py  protocols.py  ynab_client.py
src/db/: database.py  protocols.py
src/mock_data/: generate_mock_data.py
src/services/: amazon_matcher.py  categorizer.py  history.py  matcher.py  protocols.py  sync.py
src/tui/: app.py  dependencies.py  handlers.py  state.py
src/utils/: __init__.py  fuzzy.py
tests/: conftest.py  test_amazon_matcher.py  test_categorizer.py  test_category_mapping.py  test_cli.py  test_cli_formatters.py  test_cli_helpers.py  test_config.py  test_database.py  test_decorators.py  test_handlers.py  test_history.py  test_matcher.py  test_mock_client.py  test_models.py  test_pending_change_updates.py  test_push_preview.py  test_state.py  test_sync.py  test_tui.py  test_tui_app.py  test_tui_modals.py  test_tui_screens.py  test_tui_widgets.py  test_utils.py
tests/database/: test_amazon_mixin.py  test_category_mixin.py  test_history_mixin.py  test_pending_mixin.py  test_transaction_mixin.py
tests/fixtures/: factories.py
tests/integration/: test_amazon_matcher.py  test_categorizer_service.py  test_category_mapping_service.py  test_history_service.py  test_sync_service.py  test_transaction_matcher.py
ynab_tui/: config.py  main.py
ynab_tui/cli/: __init__.py  formatters.py  helpers.py
ynab_tui/clients/: __init__.py  mock_ynab_client.py  ynab_client.py
ynab_tui/db/: database.py
ynab_tui/mock_data/: categories.csv  generate_mock_data.py  transactions.csv
ynab_tui/services/: __init__.py  matcher.py  (+3 more)
(+31 files in other folders)
